log/build_2023-06-14_17-10-59/control/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/r1/r1_ws/install/control/lib/python3.10/site-packages/control/base.py", line 26
    'sensors_pub'
    ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

